missing-qobject: Don't warn on missing Q_OBJECT in template classes

moc doesn't support it
BUG: 355691